// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`build in the app package.json 1`] = `"'build' in the application package.json (<path>/package.json) is not supported since 3.0 anymore. Please move 'build' into the development package.json (<path>/package.json)"`;

exports[`cli 1`] = `
Object {
  "config": undefined,
  "draft": undefined,
  "extraMetadata": undefined,
  "prepackaged": undefined,
  "prerelease": undefined,
  "projectDir": undefined,
  "publish": undefined,
  "targets": Map {
    Platform {
      "buildConfigurationKey": "mac",
      "name": "mac",
      "nodeName": "darwin",
    } => Map {
      1 => Array [],
    },
  },
}
`;

exports[`cli 2`] = `
Object {
  "config": undefined,
  "draft": undefined,
  "extraMetadata": undefined,
  "prepackaged": undefined,
  "prerelease": undefined,
  "projectDir": undefined,
  "publish": undefined,
  "targets": Map {
    Platform {
      "buildConfigurationKey": "mac",
      "name": "mac",
      "nodeName": "darwin",
    } => Map {
      1 => Array [
        "dir",
      ],
    },
  },
}
`;

exports[`cli 3`] = `
Object {
  "config": undefined,
  "draft": undefined,
  "extraMetadata": undefined,
  "prepackaged": undefined,
  "prerelease": undefined,
  "projectDir": undefined,
  "publish": undefined,
  "targets": Map {
    Platform {
      "buildConfigurationKey": "linux",
      "name": "linux",
      "nodeName": "linux",
    } => Map {
      1 => Array [
        "dir",
      ],
    },
  },
}
`;

exports[`cli 4`] = `
Object {
  "config": undefined,
  "draft": undefined,
  "extraMetadata": undefined,
  "prepackaged": undefined,
  "prerelease": undefined,
  "projectDir": undefined,
  "publish": undefined,
  "targets": Map {
    Platform {
      "buildConfigurationKey": "linux",
      "name": "linux",
      "nodeName": "linux",
    } => Map {
      1 => Array [],
    },
  },
}
`;

exports[`cli 5`] = `
Object {
  "config": undefined,
  "draft": undefined,
  "extraMetadata": undefined,
  "prepackaged": undefined,
  "prerelease": undefined,
  "projectDir": undefined,
  "publish": undefined,
  "targets": Map {
    Platform {
      "buildConfigurationKey": "win",
      "name": "windows",
      "nodeName": "win32",
    } => Map {
      1 => Array [],
    },
  },
}
`;

exports[`cli 6`] = `
Object {
  "config": undefined,
  "draft": undefined,
  "extraMetadata": undefined,
  "prepackaged": undefined,
  "prerelease": undefined,
  "projectDir": undefined,
  "publish": undefined,
  "targets": Map {
    Platform {
      "buildConfigurationKey": "mac",
      "name": "mac",
      "nodeName": "darwin",
    } => Map {
      1 => Array [],
    },
    Platform {
      "buildConfigurationKey": "linux",
      "name": "linux",
      "nodeName": "linux",
    } => Map {
      1 => Array [],
    },
    Platform {
      "buildConfigurationKey": "win",
      "name": "windows",
      "nodeName": "win32",
    } => Map {
      1 => Array [],
    },
  },
}
`;

exports[`cli 7`] = `
Object {
  "config": undefined,
  "draft": undefined,
  "extraMetadata": undefined,
  "prepackaged": undefined,
  "prerelease": undefined,
  "projectDir": undefined,
  "publish": undefined,
  "targets": Map {
    Platform {
      "buildConfigurationKey": "linux",
      "name": "linux",
      "nodeName": "linux",
    } => Map {
      0 => Array [
        "tar.gz",
      ],
    },
  },
}
`;

exports[`cli 8`] = `
Object {
  "config": undefined,
  "draft": undefined,
  "extraMetadata": undefined,
  "prepackaged": undefined,
  "prerelease": undefined,
  "projectDir": undefined,
  "publish": undefined,
  "targets": Map {
    Platform {
      "buildConfigurationKey": "linux",
      "name": "linux",
      "nodeName": "linux",
    } => Map {
      1 => Array [
        "tar.gz",
      ],
    },
  },
}
`;

exports[`cli 9`] = `
Object {
  "config": undefined,
  "draft": undefined,
  "extraMetadata": undefined,
  "prepackaged": undefined,
  "prerelease": undefined,
  "projectDir": undefined,
  "publish": undefined,
  "targets": Map {
    Platform {
      "buildConfigurationKey": "linux",
      "name": "linux",
      "nodeName": "linux",
    } => Map {
      1 => Array [
        "tar.gz",
      ],
    },
  },
}
`;

exports[`cli 10`] = `
Object {
  "config": undefined,
  "draft": undefined,
  "extraMetadata": undefined,
  "prepackaged": undefined,
  "prerelease": undefined,
  "projectDir": undefined,
  "publish": undefined,
  "targets": Map {
    Platform {
      "buildConfigurationKey": "win",
      "name": "windows",
      "nodeName": "win32",
    } => Map {
      1 => Array [
        "tar.gz",
      ],
    },
  },
}
`;

exports[`custom buildResources and output dirs: linux 1`] = `
Array [
  "TestApp-1.1.0-x86_64.AppImage",
]
`;

exports[`custom buildResources and output dirs: win 1`] = `
Array [
  "Test App ßW Setup 1.1.0.exe",
]
`;

exports[`custom buildResources and output dirs: win 2`] = `
Array [
  "TestApp-Setup-1.1.0.exe",
]
`;

exports[`name in the build 1`] = `
"Config is invalid:
{
  \\"name\\": \\"Unknown option\\"
}

Raw validation errors: [
  {
    \\"keyword\\": \\"additionalProperties\\",
    \\"dataPath\\": \\"\\",
    \\"schemaPath\\": \\"#/additionalProperties\\",
    \\"params\\": {
      \\"additionalProperty\\": \\"name\\"
    },
    \\"message\\": \\"should NOT have additional properties\\"
  }
]"
`;

exports[`scheme validation 1`] = `
"Config is invalid:
{
  \\"foo\\": \\"Unknown option\\",
  \\"mac\\": [
    {
      \\"foo\\": \\"Unknown option\\"
    },
    \\"Invalid option object\\"
  ]
}

Raw validation errors: [
  {
    \\"keyword\\": \\"additionalProperties\\",
    \\"dataPath\\": \\"\\",
    \\"schemaPath\\": \\"#/additionalProperties\\",
    \\"params\\": {
      \\"additionalProperty\\": \\"foo\\"
    },
    \\"message\\": \\"should NOT have additional properties\\"
  },
  {
    \\"keyword\\": \\"additionalProperties\\",
    \\"dataPath\\": \\".mac\\",
    \\"schemaPath\\": \\"#/additionalProperties\\",
    \\"params\\": {
      \\"additionalProperty\\": \\"foo\\"
    },
    \\"message\\": \\"should NOT have additional properties\\"
  },
  {
    \\"keyword\\": \\"type\\",
    \\"dataPath\\": \\".mac\\",
    \\"schemaPath\\": \\"#/properties/mac/anyOf/1/type\\",
    \\"params\\": {
      \\"type\\": \\"null\\"
    },
    \\"message\\": \\"should be null\\"
  },
  {
    \\"keyword\\": \\"anyOf\\",
    \\"dataPath\\": \\".mac\\",
    \\"schemaPath\\": \\"#/properties/mac/anyOf\\",
    \\"params\\": {},
    \\"message\\": \\"should match some schema in anyOf\\"
  }
]"
`;

exports[`scheme validation 2 1`] = `
"Config is invalid:
{
  \\"appId\\": \\"Should be null,string\\"
}

Raw validation errors: [
  {
    \\"keyword\\": \\"type\\",
    \\"dataPath\\": \\".appId\\",
    \\"schemaPath\\": \\"#/properties/appId/type\\",
    \\"params\\": {
      \\"type\\": \\"null,string\\"
    },
    \\"message\\": \\"should be null,string\\"
  }
]"
`;
